Images stretching fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ a {
 
 img {
   display: block;
-  min-width: 100%;
+  /*min-width: 100%;*/
   width: 300px;
   height: 300px;
 }
